# publicidad

./: .account_rotation_state.json  .env.example  .gitignore  .job_poller_state.json  .prompt_last_send.json  .service_rotation_state.json  CLAUDE.md  INSTALADOR.md  README.md  REELS_CHECKLIST.md  _check_execs.js  _tmp_check_65103.py  _tmp_check_cdp.py  _tmp_check_new.py  _tmp_check_state.py  _tmp_click_new_project.py  _tmp_debug_crear.py  _tmp_extend_ig_token.py  _tmp_find_crear.py  _tmp_fix_fb_token.py  _tmp_inject_hook.py  _tmp_inspect_flow_dom.py  _tmp_inspect_flow_dom2.py  _tmp_list_pages.py  _tmp_upload_video.py  _update_bjq.js  abrir_dicloak_debug.bat  abrir_dicloak_y_chatgpt.bat  abrir_perfil_dicloak.js  debug_cmdline.txt  force_open_profile_cdp.js  forzar_cdp_post_apertura.bat  guia-tiktok-developer-business.html  iniciar.bat  iniciar_gui.vbs  iniciar_poller.bat  iniciar_poller_background.bat  orchestrator.py  package-lock.json  package.json  (+4 more)
.claude/: settings.json  settings.local.json
Backend/: facebook.sql  facebook.sqlite3  googleads.sql  instagram.sql  instagram.sqlite3  linkedin.sql  linkedin.sqlite3  schema_empresas_redes.sql  schema_publications.sql  tiktok.sql  tiktok.sqlite3  ver_sqlite.py
_scratch/: _tmp_analisis.py  _tmp_check_cdp.py  _tmp_check_ig.py  _tmp_check_video_state.py  _tmp_debug_new_project.py  _tmp_fix_ig.py  _tmp_inspect_flow.py  _tmp_inspect_project.py  _tmp_test_n8n_video.py  _tmp_verify_reel.py  test_uc_ginsbrowser.py
brochure_rpa/: brochure_output.html  brochure_pipeline.py  brochure_setup.py  html_to_pdf.py
cdp/: detect_port.py  (+3 more)
(+262 files in other folders)
